# cargo-contract

./: .gitignore  .gitlab-ci.yml  .gitlab.ci.yml  .rustfmt.toml  AGENTS.md  CHANGELOG.md  CODEOWNERS  Cargo.toml  Dockerfile  FILE_HEADER  README.md  build.rs  build_info.json  compilers.sh  rust-toolchain.toml  solang.sh
.cargo/: config.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: check.yml  ci.yml  dependabot-auto-merge.yml  macos.yml  main.yml  ping-matrix.yml  (+3 more)
build-image/: Dockerfile  README.md  build.sh
crates/account/: Cargo.toml
crates/account/src/: lib.rs
crates/analyze/: Cargo.toml  README.md
crates/analyze/contract-binaries/ink-6.0.0-alpha.4/: accumulator.polkavm  adder.polkavm  bytes.polkavm  call_builder.polkavm  call_builder_delegate.polkavm  call_builder_return_value.polkavm  complex_storage_structures.polkavm  conditional_compilation.polkavm  constructors_return_value.polkavm  contract1.polkavm  contract2.polkavm  contract_ref.polkavm  contract_storage.polkavm  contract_terminate.polkavm  contract_transfer.polkavm  cross_contract_calls.polkavm  custom_allocator.polkavm  custom_environment.polkavm  debugging_strategies.polkavm  dns.polkavm  e2e_call_runtime.polkavm  e2e_runtime_only_backend.polkavm  erc1155.polkavm  erc20.polkavm  erc721.polkavm  events.polkavm  fallible_setter-features-no.polkavm  flipper.polkavm  fuzz_testing.polkavm  incrementer.polkavm  instantiate_contract.polkavm  integration_flipper.polkavm  lazyvec.polkavm  mapping-features-no.polkavm  mapping.polkavm  misc_hostfns.polkavm  mother.polkavm  multi_contract_caller.polkavm  multisig.polkavm  overflow_safety.polkavm  (+17 more)
crates/analyze/contract-binaries/resolc-0.3.0/: Balance.sol-Balance.pvm  Balance.sol-BalanceReceiver.pvm  BaseFee.sol-BaseFee.pvm  Baseline.sol-Baseline.pvm  Bitwise.sol-Bitwise.pvm  Block.sol-Block.pvm  BlockHash.sol-BlockHash.pvm  Call.sol-Callee.pvm  Call.sol-Caller.pvm  Coinbase.sol-Coinbase.pvm  Computation.sol-Computation.pvm  Context.sol:Context.pvm  Create.sol-CreateB.pvm  Create2.sol:CreateA.pvm  Create2.sol:CreateB.pvm  Crypto.sol-TestSha3.pvm  Delegate.sol-Logic.pvm  Delegate.sol:Tester.pvm  DelegateCaller.sol-DelegateCaller.pvm  DivisionArithmetics.sol-DivisionArithmetics.pvm  ERC20.sol-ERC20.pvm  ERC20.sol:ERC20Tester.pvm  Events.sol-Events.pvm  ExtCode.sol-ExtCode.pvm  Fibonacci.sol-FibonacciBinet.pvm  Fibonacci.sol-FibonacciIterative.pvm  Fibonacci.sol-FibonacciRecursive.pvm  FunctionPointer.sol-FunctionPointer.pvm  FunctionType.sol-FunctionType.pvm  GasLeft.sol:GasLeft.pvm  GasLimit.sol-GasLimit.pvm  GasPrice.sol-GasPrice.pvm  Immutables.sol-Immutables.pvm  Immutables.sol:ImmutablesTester.pvm  MCopy.sol-MCopy.pvm  MCopyOverlap.sol-MCopyOverlap.pvm  MLoad.sol:MLoad.pvm  MStore8.sol-MStore8.pvm  ReturnDataOob.sol-Callee.pvm  ReturnDataOob.sol-ReturnDataOob.pvm  (+10 more)
crates/analyze/src/: lib.rs
crates/cargo-contract/: Cargo.toml  build.rs
crates/cargo-contract/src/: account.rs  config.rs  crate_metadata.rs  main.rs  validate_wasm.rs  wasm_opt.rs
crates/cargo-contract/src/cmd/: account.rs  build.rs  build_summary.rs  call.rs  config.rs  decode.rs  encode.rs  info.rs  instantiate.rs  integration_tests.rs  lint.rs  metadata.rs  mod.rs  new.rs  printer.rs  prod_chains.rs  remove.rs  rpc.rs  save.rs  schema.rs  solidity.rs  storage.rs  test.rs  test_cmd.rs  upload.rs  verify.rs
crates/cargo-contract/src/cmd/extrinsics/: balance.rs  call.rs  error.rs  events.rs  info.rs  instantiate.rs  integration_tests.rs  mod.rs  remove.rs  upload.rs
crates/cargo-contract/src/cmd/extrinsics/runtime_api/: contracts_runtime.scale  mod.rs
crates/cargo-contract/src/cmd/runtime_api/: contracts_runtime.scale  mod.rs
crates/cargo-contract/src/cmd/test/: mod.rs  tests.rs
crates/cargo-contract/src/util/: mod.rs  tests.rs
crates/cargo-contract/src/workspace/: manifest.rs  metadata.rs  mod.rs
crates/cargo-contract/templates/new/: _Cargo.toml  lib.rs
crates/cargo-contract/templates/tools/generate-metadata/: main.rs
crates/cargo-contract/tests/: decode.rs  encode.rs  event_decoding_test.rs  test_cmd.rs  verify.rs
crates/cargo-contract/tests/utils/: mod.rs  node_proc.rs
crates/extrinsics/: Cargo.toml  README.md
crates/extrinsics/src/: balance.rs  call.rs  contract_artifacts.rs  contract_info.rs  contract_storage.rs  contract_storage_tests.rs  env_check.rs  error.rs  events.rs  extrinsic_calls.rs  extrinsic_opts.rs  instantiate.rs  integration_tests.rs  lib.rs  map_account.rs  pair_signer.rs  pallet_contracts_primitives.rs  pallet_revive_primitives.rs  prod_chains.rs  remove.rs  rpc.rs  upload.rs
crates/extrinsics/src/runtime_api/: academy_pow.scale  contracts_runtime.scale  invalid_metadata.json  metadata.scale  mod.rs
crates/extrinsics/src/test_runtime_api/: metadata_v11.scale  metadata_v15.scale  metadata_v16.scale
crates/metadata/: Cargo.toml  README.md  compatibility_list.json  lib.rs
crates/metadata/src/: byte_str.rs  compatibility.rs  lib.rs
crates/template/: Cargo.toml  build.rs
crates/template/src/: lib.rs
crates/template/templates/new/: _Cargo.toml
crates/transcode/: Cargo.toml  README.md
crates/transcode/src/: account.rs  account_id.rs  account_id20.rs  decode.rs  encode.rs  env_check.rs  env_types.rs  lib.rs  transcoder.rs  util.rs
crates/transcode/src/scon/: display.rs  mod.rs  parse.rs
docs/: extrinsics.md  info.md  rpc.md
ink_linting/: .rustfmt.toml  Cargo.toml  LICENSE  README.md  _Cargo.toml  rust-toolchain  rust-toolchain.toml
metadata/: Cargo.toml  README.md  byte_str.rs  lib.rs
scripts/: pre_cache.sh
src/: crate_metadata.rs  main.rs  manifest.rs  tests.rs  tmp_manifest.rs  util.rs  validate_wasm.rs  wasm_opt.rs  workspace.rs
template/: .gitignore  Cargo.toml  _Cargo.toml  lib.rs
template/.ink/abi_gen/: Cargo.toml  _Cargo.toml  main.rs
tests/: decode.rs  extrinsics.rs
transcode/: Cargo.toml  README.md
transcode/src/: decode.rs  encode.rs  env_types.rs  lib.rs  transcoder.rs  util.rs
transcode/src/scon/: display.rs  mod.rs  parse.rs
(+72 files in other folders)
