[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
rust-version = "1.88"

[workspace.dependencies]
ink_metadata = { git = "https://github.com/use-ink/ink", tag = "v6.0.0-alpha.3", version = "6.0.0-alpha.3", default-features = false, features = ["std", "derive"] }
ink_env = { git = "https://github.com/use-ink/ink", tag = "v6.0.0-alpha.3", version = "6.0.0-alpha.3", features = ["unstable-hostfn"] }
