[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
rust-version = "1.88"

[workspace.dependencies]
ink_metadata = { git = "https://github.com/use-ink/ink", branch = "master", default-features = false, features = ["std", "derive"] }
ink_env = { git = "https://github.com/use-ink/ink", branch = "master", features = ["unstable-hostfn"] }
