[package]
name = "contract-metadata"
version = "0.5.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
rust-version = "1.56.1"

license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/paritytech/cargo-contract"
documentation = "https://docs.rs/contract-metadata"
homepage = "https://www.substrate.io/"
description = "Library defining metadata for smart contracts on substrate"
keywords = ["parity", "blockchain"]
include = ["Cargo.toml", "*.rs", "LICENSE"]

[lib]
path = "lib.rs"

[dependencies]
impl-serde = "0.3.2"
semver = { version = "1.0.4", features = ["serde"] }
serde = { version = "1.0.133", default-features = false, features = ["derive"] }
serde_json = "1.0.73"
url = { version = "2.2.2", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "1.0.0"
