[package]
name = "contract-metadata"
version = "0.5.1"
authors = ["Parity Technologies <admin@parity.io>"]
rust-version = "1.56.1"
edition = "2021"

license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/paritytech/cargo-contract"
documentation = "https://docs.rs/contract-metadata"
homepage = "https://www.substrate.io/"
description = "Library defining metadata for smart contracts on substrate"
keywords = ["parity", "blockchain"]
include = ["Cargo.toml", "*.rs", "LICENSE"]

[lib]
path = "lib.rs"

[dependencies]
impl-serde = "0.3.2"
semver = { version = "1.0.5", features = ["serde"] }
serde = { version = "1.0.136", default-features = false, features = ["derive"] }
serde_json = "1.0.79"
url = { version = "2.2.2", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "1.1.0"
