[package]
name = "contract-transcode"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/paritytech/cargo-contract"
documentation = "https://docs.rs/contract-transcode"
homepage = "https://www.substrate.io/"
description = "Library encoding calls for smart contracts on substrate"
keywords = ["wasm", "parity", "webassembly", "blockchain", "edsl"]
include = ["Cargo.toml", "*.rs", "LICENSE"]

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.60"
contract-metadata = { version = "1", path = "../metadata" }
env_logger = "0.9.0"
escape8259 = "0.5.1"
hex = "0.4.3"
indexmap = "1.9.1"
ink_env = { version = "4", git = "https://github.com/paritytech/ink", branch = "hc-versioned-metadata" }
ink_metadata = { version = "4", features = ["derive"], git = "https://github.com/paritytech/ink", branch = "hc-versioned-metadata" }
itertools = "0.10.3"
log = "0.4.17"
nom = "7.1.1"
nom-supreme = { version = "0.7.0", features = ["error"] }
scale = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.143", default-features = false, features = ["derive"] }
serde_json = "1.0.83"
sp-core = "6.0.0"
sp-runtime = "6.0.0"

[dev-dependencies]
assert_matches = "1.5.0"
ink_lang = { version = "4", git = "https://github.com/paritytech/ink", branch = "hc-versioned-metadata" }
ink_primitives = { version = "4", git = "https://github.com/paritytech/ink", branch = "hc-versioned-metadata" }
ink_storage = { version = "4", git = "https://github.com/paritytech/ink", branch = "hc-versioned-metadata" }

[features]
# This `std` feature is required for testing using an inline contract's metadata, because `ink!` annotates the metadata
# generation code with `#[cfg(feature = "std")]`.
default = ["std"]
std = []
