[package]
name = "contract-transcode"
version = "0.2.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/paritytech/cargo-contract"
documentation = "https://docs.rs/contract-transcode"
homepage = "https://www.substrate.io/"
description = "Library encoding calls for smart contracts on substrate"
keywords = ["wasm", "parity", "webassembly", "blockchain", "edsl"]
include = ["Cargo.toml", "*.rs", "LICENSE"]

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.62"
contract-metadata = { version = "2.0.0-alpha.1", path = "../metadata" }
env_logger = "0.9.0"
escape8259 = "0.5.2"
hex = "0.4.3"
indexmap = "1.9.1"
ink_env = "4.0.0-alpha.1"
ink_metadata = { version = "4.0.0-alpha.1", features = ["derive"] }
itertools = "0.10.3"
tracing = "0.1.36"
nom = "7.1.1"
nom-supreme = { version = "0.7.0", features = ["error"] }
scale = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.144", default-features = false, features = ["derive"] }
serde_json = "1.0.85"
sp-core = "6.0.0"
sp-runtime = "6.0.0"

[dev-dependencies]
assert_matches = "1.5.0"
ink_lang = "4.0.0-alpha.1"
ink_primitives = "4.0.0-alpha.1"
ink_storage = "4.0.0-alpha.1"

[features]
# This `std` feature is required for testing using an inline contract's metadata, because `ink!` annotates the metadata
# generation code with `#[cfg(feature = "std")]`.
default = ["std"]
std = []
