[package]
name = "account"
edition = "2021"
homepage = "https://moonbeam.network"
license = "GPL-3.0-only"
version = "0.1.1"

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[dependencies]
blake2-rfc = "0.2.18"
hex = "0.4.3"
impl-serde = "0.3.1"
libsecp256k1 = { version = "0.7", features = [ "hmac" ] }
log = "0.4"
serde = { version = "1.0.101", features = [ "derive" ] }
sha3 = { version = "0.10", default-features = false }

scale-decode = "0.7.0"
scale-encode = "0.3.0"

# Substrate
parity-scale-codec = {version = "3.1.2", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
sp-core = "21.0.0"
sp-io = "23.0.0"
sp-runtime = "24.0.0"
sp-runtime-interface = "17.0.0"
sp-std = "8.0.0"
