[package]
name = "contract-analyze"
version = "5.0.0-alpha"
authors = ["Use Ink <ink@use.ink>"]
edition = "2021"

license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/use-ink/cargo-contract"
documentation = "https://docs.rs/contract-analyze"
homepage = "https://www.substrate.io/"
description = "Library determining source language for smart contracts on substrate"
keywords = ["wasm", "ink", "webassembly", "blockchain", "edsl"]
include = ["Cargo.toml", "*.rs", "LICENSE"]

[dependencies]
contract-metadata = { version = "5.0.0-alpha", path = "../metadata" }
wasmparser = "0.220.0"
anyhow = "1.0.83"

[dev-dependencies]
wat = "1.207.0"

