[package]
name = "contract-analyze"
version = "6.0.0-alpha.1"
authors = ["Use Ink <ink@use.ink>"]
edition = "2021"

license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/use-ink/cargo-contract"
documentation = "https://docs.rs/contract-analyze"
homepage = "https://www.substrate.io/"
description = "Library determining source language for smart contracts on substrate"
keywords = ["polkavm", "ink", "riscv", "blockchain", "edsl"]
include = ["Cargo.toml", "*.rs", "LICENSE"]

[dependencies]
contract-metadata = { version = "6.0.0-alpha.1", path = "../metadata" }
anyhow = "1.0.98"
