[package]
name = "cargo-contract"
version = "6.0.0-alpha.3"
authors = ["Use Ink <ink@use.ink>"]
build = "build.rs"
edition = "2024"

license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/use-ink/cargo-contract"
documentation = "https://use.ink"
homepage = "https://use.ink"
description = "Setup and deployment tool for developing smart contracts via ink!"
keywords = ["polkavm", "ink", "riscv", "blockchain", "edsl"]
categories = ["command-line-utilities", "development-tools::build-utils", "development-tools::cargo-plugins"]
include = [
    "Cargo.toml", "src/**/*.rs", "README.md", "LICENSE", "build.rs",
]

[dependencies]
contract-build = { version = "6.0.0-alpha.3", path = "../build" }
contract-extrinsics = { version = "6.0.0-alpha.3", path = "../extrinsics" }
contract-transcode = { version = "6.0.0-alpha.3", path = "../transcode" }
contract-metadata = { version = "6.0.0-alpha.3", path = "../metadata" }
contract-analyze = { version = "6.0.0-alpha.3", path = "../analyze" }

anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive", "env"] }
primitive-types = { version = "0.13.1", default-features = false, features = ["codec", "scale-info", "serde"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
which = "8.0.0"
colored = "3.0.0"
regex = "1"
serde_json = "1.0.140"
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
url = { version = "2.5.4", features = ["serde"] }
semver = "1.0"
jsonschema = "0.33.0"
schemars = "0.8.22"
comfy-table = "7.1.4"
num-traits = "0.2.19"

ink_metadata = { workspace = true }
ink_env = { workspace = true }

# dependencies for extrinsics (deploying and calling a contract)
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
subxt = { version = "0.44.0" }
hex = "0.4.3"

sp-core = { git = "https://github.com/use-ink/polkadot-sdk.git", rev = "a71ec19a94702ea71767ba5ac97603ea6c6305c1", default-features = false }
sp-weights = { git = "https://github.com/use-ink/polkadot-sdk.git", rev = "a71ec19a94702ea71767ba5ac97603ea6c6305c1", default-features = false }

[build-dependencies]
anyhow = "1.0.95"
substrate-build-script-utils = { git = "https://github.com/use-ink/polkadot-sdk.git", rev = "a71ec19a94702ea71767ba5ac97603ea6c6305c1", default-features = false }
current_platform = "0.2.0"
which = "8.0.0"

[dev-dependencies]
assert_cmd = "2.0.17"
regex = "1.11.1"
predicates = "3.1.3"
tempfile = "3.20.0"
sp-keyring = { git = "https://github.com/use-ink/polkadot-sdk.git", rev = "a71ec19a94702ea71767ba5ac97603ea6c6305c1", default-features = false }

[features]
# This `std` feature is required for testing using an inline contract's metadata, because `ink!` annotates the metadata
# generation code with `#[cfg(feature = "std")]`.
default = ["std"]
std = []

# Enable this to execute long-running tests, which usually are only run on the CI server
#
# Disabled by default
test-ci-only = []

# Enable this to execute tests which depend on a locally running contracts enabed chain
# e.g.https://github.com/paritytech/substrate-contracts-node
integration-tests = []
