[package]
name = "contract-extrinsics"
version = "6.0.0-alpha.3"
authors = ["Use Ink <ink@use.ink>"]
edition = "2024"
rust-version.workspace = true

license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/use-ink/cargo-contract"
documentation = "https://docs.rs/contract-extrinsics"
homepage = "https://www.substrate.io/"
description = "Library defining extrinsics for smart contracts on polkadot-sdk"
keywords = ["polkavm", "ink", "riscv", "blockchain", "edsl"]
include = ["Cargo.toml", "*.rs", "LICENSE"]

[dependencies]
contract-build = { version = "6.0.0-alpha.3", path = "../build" }
contract-metadata = { version = "6.0.0-alpha.3", path = "../metadata" }
contract-transcode = { version = "6.0.0-alpha.3", path = "../transcode" }

anyhow = "1.0.98"
itertools = { version = "0.14", default-features = false }
tracing = "0.1.41"
scale = { package = "parity-scale-codec", version = "3.6.12", features = ["derive"] }
colored = "3.0.0"
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = "1.0.140"
url = { version = "2.5.4", features = ["serde"] }
rust_decimal = "1.37.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
scale-info = {  version = "2.11.6", default-features = false }
subxt = "0.44.0"
hex = "0.4.3"
derivative = "2.2.0"

sp-core = { git = "https://github.com/use-ink/polkadot-sdk.git", rev = "a71ec19a94702ea71767ba5ac97603ea6c6305c1", default-features = false }
sp-runtime = { git = "https://github.com/use-ink/polkadot-sdk.git", rev = "a71ec19a94702ea71767ba5ac97603ea6c6305c1" }
sp-weights = { git = "https://github.com/use-ink/polkadot-sdk.git", rev = "a71ec19a94702ea71767ba5ac97603ea6c6305c1", default-features = false }
pallet-revive = { git = "https://github.com/use-ink/polkadot-sdk.git", rev = "a71ec19a94702ea71767ba5ac97603ea6c6305c1" }
pallet-revive-uapi = { git = "https://github.com/use-ink/polkadot-sdk.git", rev = "a71ec19a94702ea71767ba5ac97603ea6c6305c1", default-features = false, features = ["unstable-hostfn", "scale"] }

ink_metadata = { workspace = true }
ink_env = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0.17"
regex = "1.11.1"
predicates = "3.1.3"
tempfile = "3.16.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
subxt-signer = { version = "0.44.0", features = ["subxt", "sr25519"] }
stdio-override = "0.2.0"

[features]
integration-tests = []
test-ci-only = []
