[package]
name = "contract-extrinsics"
version = "6.0.0-beta.1"
authors = ["Use Ink <ink@use.ink>"]
edition = "2024"
rust-version.workspace = true

license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/use-ink/cargo-contract"
documentation = "https://docs.rs/contract-extrinsics"
homepage = "https://use.ink/"
description = "Library defining extrinsics for smart contracts on polkadot-sdk"
keywords = ["polkavm", "ink", "riscv", "blockchain", "edsl"]
include = ["Cargo.toml", "*.rs", "LICENSE"]

[dependencies]
contract-build = { version = "6.0.0-beta.1", path = "../build" }
contract-metadata = { version = "6.0.0-beta.1", path = "../metadata" }
contract-transcode = { version = "6.0.0-beta.1", path = "../transcode" }

anyhow = "1.0.100"
itertools = { version = "0.14", default-features = false }
tracing = "0.1.41"
scale = { package = "parity-scale-codec", version = "3.6.12", features = ["derive"] }
colored = "3.0.0"
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = "1.0.145"
url = { version = "2.5.4", features = ["serde"] }
rust_decimal = "1.37.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
scale-info = {  version = "2.11.6", default-features = false }
subxt = "0.44.0"
hex = "0.4.3"
derivative = "2.2.0"

sp-core = { version = "38.0.0", default-features = false }
sp-runtime = { version = "43.0.0" }
sp-weights = { version = "33.0.0", default-features = false }
pallet-revive-uapi = { version = "0.8.0", default-features = false, features = ["unstable-hostfn", "scale"] }

ink_metadata = { workspace = true }
ink_env = { workspace = true }

[dev-dependencies]
ink = { version = "6.0.0-beta.1", features = ["unstable-hostfn"] }
assert_cmd = "=2.1.1"
regex = "1.11.1"
predicates = "3.1.3"
tempfile = "3.23.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
subxt-signer = { version = "0.44.0", features = ["subxt", "sr25519"] }
stdio-override = "0.2.0"

[features]
std = []
integration-tests = []
test-ci-only = []
