[package]
name = "contract-metadata"
version = "4.0.0-rc.2"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/paritytech/cargo-contract"
documentation = "https://docs.rs/contract-metadata"
homepage = "https://www.substrate.io/"
description = "Library defining metadata for smart contracts on substrate"
keywords = ["wasm", "parity", "webassembly", "blockchain", "edsl"]
include = ["Cargo.toml", "*.rs", "LICENSE", "compatibility_list.json"]

[dependencies]
impl-serde = "0.4.0"
semver = { version = "1.0.22", features = ["serde"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1.0.113"
url = { version = "2.5.0", features = ["serde"] }
anyhow = "1.0.80"

[dev-dependencies]
pretty_assertions = "1.4.0"
