[package]
name = "contract-metadata"
version = "6.0.0-alpha.1"
authors = ["Use Ink <ink@use.ink>"]
edition = "2021"

license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/use-ink/cargo-contract"
documentation = "https://docs.rs/contract-metadata"
homepage = "https://www.substrate.io/"
description = "Library defining metadata for smart contracts on substrate"
keywords = ["polkavm", "ink", "riscv", "blockchain", "edsl"]
include = ["Cargo.toml", "*.rs", "LICENSE", "compatibility_list.json"]

[dependencies]
impl-serde = "0.5.0"
semver = { version = "1.0.26", features = ["serde"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1.0.140"
url = { version = "2.5.4", features = ["serde"] }
anyhow = "1.0.98"

[dev-dependencies]
pretty_assertions = "1.4.1"
