[package]
name = "contract-template"
version = "2.0.0-beta"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/paritytech/cargo-contract"
documentation = "https://docs.rs/contract-metadata"
homepage = "https://www.substrate.io/"
description = "Templates for ink! smart contracts"
keywords = ["wasm", "parity", "webassembly", "blockchain", "edsl"]
include = ["Cargo.toml", "*.rs", "LICENSE"]

[dependencies]
anyhow = "1.0.65"
blake2 = "0.10.4"
cargo_metadata = "0.15.0"
contract-metadata = { version = "2.0.0-alpha.4", path = "../metadata" }
colored = "2.0.0"
clap = { version = "4.0.15", features = ["derive", "env"] }
heck = "0.4.0"
hex = "0.4.3"
impl-serde = "0.4.0"
rustc_version = "0.4.0"
scale = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"] }
toml = "0.5.9"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
parity-wasm = "0.45.0"
semver = { version = "1.0.14", features = ["serde"] }
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
serde_json = "1.0.86"
tempfile = "3.3.0"
zip = { version = "0.6.3", default-features = false }

[build-dependencies]
anyhow = "1.0.65"
walkdir = "2.3.2"
zip = { version = "0.6.3", default-features = false }

[dev-dependencies]
pretty_assertions = "1.3.0"
