[package]
name = "contract-transcode"
version = "6.0.0-alpha"
authors = ["Use Ink <ink@use.ink>"]
edition = "2021"

license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/use-ink/cargo-contract"
documentation = "https://docs.rs/contract-transcode"
homepage = "https://www.substrate.io/"
description = "Library encoding calls for smart contracts on substrate"
keywords = ["polkavm", "ink", "riscv", "blockchain", "edsl"]
include = ["Cargo.toml", "*.rs", "LICENSE"]

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.95"
base58 = { version = "0.2.0" }
blake2 = { version = "0.10.6", default-features = false }
contract-metadata = { version = "6.0.0-alpha", path = "../metadata" }
escape8259 = "0.5.2"
hex = "0.4.3"
indexmap = "2.7.1"
ink_env = "6.0.0-alpha"
ink_metadata = { version = "6.0.0-alpha", default-features = false, features = ["std", "derive"] }
itertools = "0.14.0"
tracing = "0.1.40"
nom = "7.1.3"
nom-supreme = { version = "0.7.0", features = ["error"] }
primitive-types = { version = "0.13.1", default-features = false, features = ["codec", "scale-info", "serde"] }
scale = { package = "parity-scale-codec", version = "3.6.12", features = ["derive"] }
scale-info = { version = "2.11.6", default-features = false, features = ["derive"] }
serde = { version = "1.0.216", default-features = false, features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.11"
strsim = "0.11.1"
regex = "1.11.1"

[dev-dependencies]
assert_matches = "1.5.0"
ink = { version = "6.0.0-alpha", features = ["unstable-hostfn"] }
sp-core = { version = "36.1.0", default-features = false }
sp-keyring = { version = "41.0.0", default-features = false }

[features]
# This `std` feature is required for testing using an inline contract's metadata, because `ink!` annotates the metadata
# generation code with `#[cfg(feature = "std")]`.
default = ["std"]
std = []
