[package]
name = "contract-transcode"
version = "6.0.0-alpha.1"
authors = ["Use Ink <ink@use.ink>"]
edition = "2021"

license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/use-ink/cargo-contract"
documentation = "https://docs.rs/contract-transcode"
homepage = "https://www.substrate.io/"
description = "Library encoding calls for smart contracts on substrate"
keywords = ["polkavm", "ink", "riscv", "blockchain", "edsl"]
include = ["Cargo.toml", "*.rs", "LICENSE"]

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.95"
base58 = { version = "0.2.0" }
blake2 = { version = "0.10.6", default-features = false }
contract-metadata = { version = "6.0.0-alpha.1", path = "../metadata" }
escape8259 = "0.5.2"
hex = "0.4.3"
indexmap = "2.10.0"
ink_env = { workspace = true }
ink_metadata = { workspace = true }
itertools = "0.14.0"
tracing = "0.1.41"
nom = "7.1.3"
nom-supreme = { version = "0.7.0", features = ["error"] }
primitive-types = { version = "0.13.1", default-features = false, features = ["codec", "scale-info", "serde"] }
scale = { package = "parity-scale-codec", version = "3.6.12", features = ["derive"] }
scale-info = { version = "2.11.6", default-features = false, features = ["derive"] }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
strsim = "0.11.1"
regex = "1.11.1"
tokio = { version = "1.44.2", features = ["net", "macros", "rt-multi-thread"] }

[dev-dependencies]
assert_matches = "1.5.0"
ink = { git = "https://github.com/use-ink/ink", branch = "cmichi-fix-ci-2025-07-26", features = ["unstable-hostfn"] }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", default-features = false }
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", default-features = false }

# todo Remove once the `polkadot-sdk` compilation error
# for `tokio` is fixed (https://github.com/use-ink/ink/pull/2557).
[build-dependencies]
tokio = { version = "1.44.2", features = ["net"] }

[features]
# This `std` feature is required for testing using an inline contract's metadata, because `ink!` annotates the metadata
# generation code with `#[cfg(feature = "std")]`.
default = ["std"]
std = []
