[package]
name = "abi-gen"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
publish = false

[[bin]]
name = "abi-gen"
path = "main.rs"

[dependencies]
contract = { path = "../..", package = "{{name}}", default-features = false, features = ["ink-generate-abi"] }
ink_lang = { version = "2.0.0", git = "https://github.com/paritytech/ink", tag = "latest-v2.0", package = "ink_lang", default-features = false, features = ["ink-generate-abi"] }
serde = "1.0"
serde_json = "1.0"
